
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPCTSTR ;
typedef int * HANDLE ;


 int * CreateFile (int ,int,int ,int ,int ,int *,int ) ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int OPEN_EXISTING ;

HANDLE GetDeviceHandle(LPCTSTR FileName) {
 HANDLE hFile = ((void*)0);

 hFile = CreateFile(FileName,
  GENERIC_READ | GENERIC_WRITE,
  0,
  0,
  OPEN_EXISTING,
  ((void*)0),
  0);

 return hFile;
}
