; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_42735.c_GetDeviceHandle.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_42735.c_GetDeviceHandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_READ = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetDeviceHandle(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @GENERIC_READ, align 4
  %6 = load i32, i32* @GENERIC_WRITE, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @OPEN_EXISTING, align 4
  %9 = call i32* @CreateFile(i32 %4, i32 %7, i32 0, i32 0, i32 %8, i32* null, i32 0)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  ret i32* %10
}

declare dso_local i32* @CreateFile(i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
